After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745786 - Debug options not initialized in app
Debug options not initialized in app
Status: RESOLVED FIXED
Product: gnome-dictionary
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-dictionary-maint
gnome-dictionary-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-07 12:34 UTC by Juan R. Garcia Blanco
Modified: 2015-07-25 21:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Initialize debug options (662 bytes, patch)
2015-03-07 12:34 UTC, Juan R. Garcia Blanco
none Details | Review
Add gdict_init() (1.52 KB, patch)
2015-07-25 13:01 UTC, Juan R. Garcia Blanco
none Details | Review
Initialize gdict in app (652 bytes, patch)
2015-07-25 13:01 UTC, Juan R. Garcia Blanco
none Details | Review

Description Juan R. Garcia Blanco 2015-03-07 12:34:47 UTC
Created attachment 298775 [details] [review]
Initialize debug options

Debug options are not initialized in the application.
Comment 1 Emmanuele Bassi (:ebassi) 2015-03-20 21:09:46 UTC
In reality, libgdict should implicitly enable debugging options when an environment variable, like GDICT_DEBUG, is set. There should not be a need to enable debugging options programmatically.
Comment 2 Juan R. Garcia Blanco 2015-03-20 21:17:56 UTC
I cannot get it to print debug messages with:

GDICT_DEBUG=all jhbuild run gnome-dictionary

I can only get debug messages when enabling debug options explicitly, though.
Comment 3 Emmanuele Bassi (:ebassi) 2015-03-20 21:20:44 UTC
I meant that libgdict should always initialize itself to print out debugging notes, unconditionally. Code using libgdict should not need to call gdict_debug_init().
Comment 4 Juan R. Garcia Blanco 2015-07-25 13:01:22 UTC
Created attachment 308131 [details] [review]
Add gdict_init()
Comment 5 Juan R. Garcia Blanco 2015-07-25 13:01:59 UTC
Created attachment 308132 [details] [review]
Initialize gdict in app
Comment 6 Juan R. Garcia Blanco 2015-07-25 13:02:37 UTC
Not very proud, but this will enable us to have debug options initialized.