gdict: Add library init function

Add gdict_init() function to initialize the library.
Now it only enables debug options.

See https://bugzilla.gnome.org/show_bug.cgi?id=745786