libgdict/gdict-utils.c
@@ -88,7 +88,7 @@ gdict_arg_no_debug_cb (const char *key,
                            G_N_ELEMENTS (gdict_debug_keys));
   return TRUE;
 }
-#endif /* CLUTTER_ENABLE_DEBUG */
+#endif /* GDICT_ENABLE_DEBUG */
 
 static GOptionEntry gdict_args[] = {
 #ifdef GDICT_ENABLE_DEBUG
@@ -133,7 +133,8 @@ post_parse_hook (GOptionContext  *context,
                  gpointer         data,
                  GError         **error)
 {
-  gdict_is_initialized = TRUE;
+  if (gdict_is_initialized)
+    return TRUE;
 
   return TRUE;
 }
@@ -329,4 +330,25 @@ _gdict_show_gerror_dialog (GtkWidget   *widget,
   show_error_dialog (get_toplevel_window (widget), title, error->message);
       
   g_error_free (error);
+}
+
+/**
+ * gdict_init:
+ * @argc: FIXME
+ * @argv: FIXME
+ *
+ * FIXME
+ *
+ * Since: 0.12
+ */
+void
+gdict_init (gint    *argc,
+            gchar ***argv)
+{
+  if (gdict_is_initialized)
+    return;
+
+  gdict_debug_init (argc, argv);
+
+  gdict_is_initialized = TRUE;
 }
